Fix: CSS issues on mobile

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -156,7 +156,7 @@ button {
 #new_product {
   margin: auto;
   text-align: left;
-  width: 530px; }
+  width: 300px; }
   #new_product ul {
     list-style: none; }
   #new_product label {
@@ -167,12 +167,16 @@ button {
     margin: 10px 0px; }
   #new_product label#product_kind_food, #new_product label#product_kind_drink {
     display: inline; }
+  #new_product label[for='product_kind_food'], #new_product label[for='product_kind_drink'] {
+    width: 50px; }
   #new_product input[type='text'] {
-    width: 300px;
+    width: 50px;
     font-size: 15px;
     line-height: 18px;
     border: 1px solid #474747;
     padding: 5px; }
+  #new_product #product_barcode, #new_product #product_name {
+    width: 130px; }
   #new_product .per {
     font-size: 15px; }
   #new_product .added_sugar {
